--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,21 +1,31 @@
-/* -------------------------------------------------- */
+/*
+Orange color: #e67e22
+
+*/
+
+
+/* ----------------------------------------------- */
 /* BASIC SETUP */
-/* -------------------------------------------------- */
+/* ----------------------------------------------- */
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-html {
+
+html,
+body {
     background-color: #fff;
-    color: #363434;
+    color: #555;
     font-family: 'Lato', 'Arial', sans-serif;
-    font font-weight: 300;
+    font-weight: 300;
     font-size: 20px;
     text-rendering: optimizeLegibility;
+    overflow-x: hidden;
 }
 
-.clearfix {zoom:1}
+.clearfix {zoom: 1;}
 .clearfix:after {
     content: '.';
     clear: both;
@@ -23,50 +33,50 @@ html {
     height: 0;
     visibility: hidden;
 }
-/* -------------------------------------------------- */
+
+/* ----------------------------------------------- */
 /* REUSABLE COMPONENTS */
-/* -------------------------------------------------- */
+/* ----------------------------------------------- */
 
 
 .row {
     max-width: 1140px;
-    margin: 0 auto;      
+    margin: 0 auto;
 }
 
-section{
+section {
     padding: 80px 0;
 }
+
 .box {
     padding: 1%;
-    
 }
-/* -------------------------------------------------- */
-/* HEADINGS */
-/* -------------------------------------------------- */
+
+/* ----- HEADINGS ----- */
 h1,
 h2,
 h3 {
-    
     font-weight: 300;
     text-transform: uppercase;
-   
-    
 }
-h1{
-   margin-top: 0;
+
+h1 {
+    margin-top: 0;
     margin-bottom: 20px;
     color: #fff;
-    font-size: 240%; 
+    font-size: 240%;
     word-spacing: 4px;
-     letter-spacing: 1px;
+    letter-spacing: 1px;
 }
-h2{
+
+h2 {
     font-size: 180%;
     word-spacing: 2px;
     text-align: center;
     margin-bottom: 30px;
-     letter-spacing: 1px;
+    letter-spacing: 1px;
 }
+
 h3 {
     font-size: 110%;
     margin-bottom: 15px;
@@ -82,26 +92,26 @@ h2:after {
     margin-top: 30px;
 }
 
-/* -------------------------------------------------- */
-/* PARAGRAPH*/
-/* -------------------------------------------------- */
+/* ----- PARAGRAPHS ----- */
 .long-copy {
     line-height: 145%;
     width: 70%;
     margin-left: 15%;
 }
 
-
-
 .box p {
     font-size: 90%;
     line-height: 145%;
-    
 }
 
-/* -------------------------------------------------- */
-/* ICONS*/
-/* -------------------------------------------------- */
+
+/* ----- ICONS ----- */
+.icon-big {
+    font-size: 350%;
+    display: block;
+    color: #e67e22;
+    margin-bottom: 10px;
+}
 
 .icon-small {
     display: inline-block;
@@ -110,11 +120,12 @@ h2:after {
     color: #e67e22;
     font-size: 120%;
     margin-right: 10px;
+    
+    /*secrets to align text and icons*/
     line-height: 120%;
     vertical-align: middle;
     margin-top: -5px;
 }
-
 
 /* ----- LINKS ----- */
 
@@ -134,11 +145,7 @@ a:active {
     border-bottom: 1px solid transparent;
 }
 
-
-/* -------------------------------------------------- */
-/* BUTTONS */
-/* -------------------------------------------------- */
-
+/* ----- BUTTONS ----- */
 .btn:link,
 .btn:visited,
 input[type=submit] {
@@ -184,23 +191,28 @@ input[type=submit]:active {
     color: #fff;
 }
 
-/* -------------------------------------------------- */
+
+/* ----------------------------------------------- */
 /* HEADER */
-/* -------------------------------------------------- */
-header{
-    background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(images/hero.jpg);
+/* ----------------------------------------------- */
+
+header {
+    background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
+ 
     background-size: cover;
     background-position: center;
     height: 100vh;
     background-attachment: fixed;
 }
 
-
 .hero-text-box {
     position: absolute;
-    width: 1140;
+    width: 1140px;
     top: 50%;
     left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
 
@@ -209,8 +221,8 @@ header{
     width: auto;
     float: left;
     margin-top: 20px;
-    
 }
+
 .logo-black { 
     display: none;
     height: 50px;
@@ -218,7 +230,7 @@ header{
     float: left;
     margin: 5px 0;
 }
-.logo-black {display: none; }
+
 /* Main navi */
 .main-nav {
     float: right;
@@ -263,37 +275,51 @@ header{
 }
 
 
+/* Sticky navi */
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.98);
+    box-shadow: 0 2px 2px #efefef;
+    z-index: 9999;
+}
 
+.sticky .main-nav { margin-top: 18px; }
 
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited {
+    padding: 16px 0;
+    color: #555;
+}
 
-/* -------------------------------------------------- */
+.sticky .logo { display: none; }
+.sticky .logo-black { display: block; }
+
+/* ----------------------------------------------- */
 /* FEATURES */
-/* -------------------------------------------------- */
+/* ----------------------------------------------- */
+
 .section-features .long-copy {
     margin-bottom: 30px;
-    
 }
 
 
-
-
-/* -------------------------------------------------- */
+/* ----------------------------------------------- */
 /* MEALS */
-/* -------------------------------------------------- */
-
-
+/* ----------------------------------------------- */
 
 .section-meals {
     padding: 0;
 }
-.meal-showcase {
+
+.meals-showcase {
     list-style: none;
     width: 100%;
-    
 }
 
-
-.meal-showcase li {
+.meals-showcase li {
     display: block;
     float: left;
     width: 25%;
@@ -310,20 +336,26 @@ header{
     opacity: 0.7;
     width: 100%;
     height: auto;
+    -webkit-transform: scale(1.15);
+    -ms-transform: scale(1.15);
     transform: scale(1.15);
-    transition: transform 0.5s; opacity: 0.5s;
-    
+    -webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
+    transition: transform 0.5s, opacity 0.5s;
 }
 
 .meal-photo img:hover {
     opacity: 1;
+    -webkit-transform: scale(1.03);
+    -ms-transform: scale(1.03);
     transform: scale(1.03);
 }
 
 
-/* -------------------------------------------------- */
-/* HOW IT WORKS*/
-/* -------------------------------------------------- */
+
+/* ----------------------------------------------- */
+/* HOW IT WORKS SECTION */
+/* ----------------------------------------------- */
+
 .section-steps {
     background-color: #f4f4f4;
 }
@@ -382,9 +414,9 @@ header{
 }
 
 
-/* -------------------------------------------------- */
-/* CITIES*/
-/* -------------------------------------------------- */
+/* ----------------------------------------------- */
+/* CITIES */
+/* ----------------------------------------------- */
 
 .box img {
     width: 100%;
@@ -394,7 +426,6 @@ header{
 
 .city-feature {
     margin-bottom: 5px;
-    
 }
 
 
@@ -403,8 +434,8 @@ header{
 /* ----------------------------------------------- */
 
 .section-testimonials {
-    background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(images/back-customers.jpg);
-    background-image:linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(images/back-customers.jpg);
+    background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers-min.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers-min.jpg);
     background-size: cover;
     color: #fff;
     background-attachment: fixed;
@@ -439,6 +470,7 @@ cite img {
     margin-right: 10px;
     vertical-align: middle;
 }
+
 
 /* ----------------------------------------------- */
 /* SIGN UP */
@@ -476,13 +508,13 @@ cite img {
 .plan-price {
     font-size: 300%;
     margin-bottom: 10px;
-    font-weight: 300;
+    font-weight: 100;
     color: #e67e22;
 }
 
 .plan-price span {
     font-size: 30%;
-    font-weight: 400;
+    font-weight: 300;
 }
 
 .plan-price-meal {
@@ -496,6 +528,8 @@ cite img {
 .plan-box ul li {
     padding: 5px 0;
 }
+
+
 /* ----------------------------------------------- */
 /* FORM */
 /* ----------------------------------------------- */
@@ -523,9 +557,7 @@ input[type=checkbox] {
     margin: 10px 5px 10px 0;
 }
 
-*:focus {outline: none;
-}
-
+*:focus {outline: none;}
 
 
 /* ----------------------------------------------- */
@@ -535,7 +567,7 @@ input[type=checkbox] {
 footer {
     background-color: #333;
     padding: 50px;
-    font-size: 100%;
+    font-size: 80%;
 }
 
 .footer-nav {
@@ -551,7 +583,7 @@ footer {
 .footer-nav li,
 .social-links li {
     display: inline-block;
-    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .footer-nav li:last-child,
@@ -614,8 +646,28 @@ footer p {
 
 
 
+/* ----------------------------------------------- */
+/* Animations */
+/* ----------------------------------------------- */
 
+.js--wp-1,
+.js--wp-2,
+.js--wp-3
+{
+    opacity: 0;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+}
 
+.js--wp-4 {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+}
 
+.js--wp-1.animated,
+.js--wp-2.animated,
+.js--wp-3.animated {
+    opacity: 1;
+}
 
 
